add other lunar data

--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -7,5 +7,10 @@
     <string name="month">{month}日</string>
     <string name="day">{day}月</string>
     <string name="lunar_date">{year}{zodiac}年&#160;&#160;{month}月{day}</string>
+    <string name="fetus_god">胎神</string>
+    <string name="twenty_eight_star">星宿</string>
+    <string name="peng_zu">彭祖</string>
+    <string name="evil_spirit">冲煞</string>
+    <string name="five_elements">五行</string>
 
 </resources>
