fix bug for NoPaddingTextView, and update themes

--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -13,4 +13,6 @@
     <string name="evil_spirit">冲煞</string>
     <string name="five_elements">五行</string>
 
+    <string name="menu_setting">设置</string>
+
 </resources>
