Fix crash when system language is not Chinese and fix bug

--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -4,8 +4,8 @@
     <string name="week_day">星期{week_day}</string>
     <string name="week_of_year">第{week_of_year}周</string>
     <string name="year">{year}年</string>
-    <string name="month">{month}日</string>
-    <string name="day">{day}月</string>
+    <string name="month">{month}月</string>
+    <string name="day">{day}日</string>
     <string name="lunar_date">{year}{zodiac}年&#160;&#160;{month}月{day}</string>
     <string name="fetus_god">胎神</string>
     <string name="twenty_eight_star">星宿</string>
